# swagger.yaml
@@ -4,18 +4,18 @@ info:
   version: "1.0.0"
   title: "Squealer API"
 #host: "site222317.tw.cs.unibo.it"
-host : "localhost:8000"
+host: "localhost:8000"
 basePath: "/"
 schemes:
-- "http"
-- "https"
+  - "http"
+  - "https"
 paths:
   /auth/{username}/{auth_field}:
     post:
       summary: Authenticate the user
       description: Authenticate the user with his password and start new session for them.
       parameters:
-        - name : username
+        - name: username
           in: path
           description: Authentication user
           type: string
@@ -25,7 +25,7 @@ paths:
           type: integer
           required: true
           description: Required role authenticating
-        - name : password
+        - name: password
           in: body
           type: string
           required: true
@@ -71,6 +71,8 @@ paths:
           description: 'Updated user'
         '400':
           description: 'Invalid username'
+        '403':
+          description: 'The requester is not the deleting user or a Squealer admin (or the requester is not logged)'
         '422':
           description: 'The user passed in request is not existent or it has not required fields (or invalid type of fields)'
           schema:
@@ -166,8 +168,8 @@ paths:
           required: false
           type: string
           enum:
-              - ORDER_ASC
-              - ORDER_DESC
+            - ORDER_ASC
+            - ORDER_DESC
       responses:
         '200':
           description: 'Successful operation'
